<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ebay Android</string>
    <string name="navigate_up">Navigate Up</string>
    <string name="toolbar_action">Toolbar Action</string>
    <string name="home">HOME</string>
    <string name="wishlist">WISHLIST</string>
    <string name="order">ORDER</string>
    <string name="account">ACCOUNT</string>
    <string name="welcome_back_to_ebay">Welcome back to \nEbay</string>
    <string name="please_enter_your_login">Please enter your login details</string>
    <string name="login">Login</string>
    <string name="your_login">Your login</string>
    <string name="password">Password</string>
    <string name="your_password">Your password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="reset_password">Reset Password</string>
    <string name="please_enter_email_to_reset_your_password">Please enter email to reset your password</string>
    <string name="email">Email</string>
    <string name="your_email">Your email</string>
    <string name="reset">Reset</string>
    <string name="verification">Verification</string>
    <string name="verification_code">Verification code</string>
    <string name="re_send_code">Re-send code</string>
    <string name="_continue">Continue</string>
    <string name="update_password">Update Password</string>
    <string name="complete_following_data">Complete the following data to enter the Ebay</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="save_update">Save Update</string>
    <string name="password_must_be">Password must be 6 characters or more</string>
    <string name="register_account">Register Account</string>
    <string name="enter_email_to_register">Enter email to register</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="profile_and_password"><![CDATA[Profile & Password]]></string>
    <string name="full_name">Full Name</string>
    <string name="your_name">Your name</string>
    <string name="confirm">Confirm</string>
    <string name="user_not_found">User not found</string>
    <string name="wrong_password">Wrong password</string>
    <string name="unknown_error">Unknown error</string>
    <string name="password_must_be_6">Password must be at least 6 characters</string>
    <string name="email_must_be_5">Email must be at least 5 characters</string>
    <string name="email_isn_t_valid">Email isn`t valid</string>
    <string name="code_is_not_valid">Code is not valid</string>
    <string name="passwords_don_t_match">Passwords don`t match</string>
    <string name="account_already_exist">Account already exist</string>
    <string name="username_must_be_3">Username must be at least 3 characters</string>
    <string name="we_have_sent_code_to">We have sent a verification code to %1$s Change?</string>
    <string name="change">Change?</string>
    <string name="timer_sec">0:%1$s</string>
    <string name="you_can_re_send_code_in">You can re-send code in</string>
    <string name="verification_is_unavailable">Verification is unavailable</string>
    <string name="have_an_account">Have an Account? Sign In</string>
    <string name="search">Search</string>
    <string name="sale_card">sale card</string>
    <string name="categories">Categories</string>
    <string name="see_all">See All</string>
    <string name="product_image">product image</string>
    <string name="menu">menu</string>
    <string name="ebay">Ebay</string>
    <string name="price_is">%1$d $</string>
    <string name="no_reviews">No Reviews</string>
    <string name="reviews_are">%1$d Reviews</string>
    <string name="product_action">Product Action</string>
    <string name="add_to_wishlist">Add to Wishlist</string>
    <string name="share_product">Share Product</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="search_product_email">Search Product Email</string>
    <string name="close">Close</string>
</resources>