<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_login"
        android:text="@string/profile_and_password"
        android:textSize="@dimen/font24"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginBetweenWelcomeBackAndEntering"
        android:text="@string/complete_following_data"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_login"
        android:text="@string/full_name"
        android:textColor="@color/black"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameInputLayout"
        style="@style/TextInputLayoutStyle.Default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginBetweenWelcomeBackAndEntering">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextInputEditText.Default"
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_name"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_login"
        android:text="@string/password"
        android:textColor="@color/black"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newPasswordInputLayout"
        style="@style/TextInputLayoutStyle.Default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginBetweenWelcomeBackAndEntering"
        app:endIconDrawable="@drawable/ic_lock_24"
        app:endIconTint="@color/half_grey"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextInputEditText.Default"
            android:id="@+id/newPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_password"/>

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_login"
        android:text="@string/password_must_be"
        android:gravity="center_vertical"
        android:drawablePadding="8dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/login_margin_bottom"
        android:layout_weight="1"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sign_in_button_height"
            android:background="@drawable/sign_in_button_background"
            android:layout_marginTop="@dimen/margin_login"
            android:layout_gravity="bottom"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/white"/>

    </FrameLayout>


</LinearLayout>