<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:text="@string/update_password"
        android:textSize="@dimen/font_24"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:text="@string/complete_following_data"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:text="@string/new_password"
        android:textColor="@color/black"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newPasswordInputLayout"
        style="@style/TextInputLayoutStyle.Default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        app:endIconDrawable="@drawable/ic_lock_24"
        app:endIconTint="@color/half_grey"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextInputEditText.Default"
            android:id="@+id/newPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_password"/>

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:text="@string/password_must_be"
        android:gravity="center_vertical"
        android:drawablePadding="8dp"
        app:drawableStartCompat="@drawable/baseline_info_24"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_28"
        android:text="@string/confirm_new_password"
        android:textColor="@color/black"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordInputLayout"
        style="@style/TextInputLayoutStyle.Default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconDrawable="@drawable/ic_lock_24"
        app:endIconTint="@color/half_grey"
        app:endIconMode="password_toggle"
        android:layout_marginTop="@dimen/margin_20">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextInputEditText.Default"
            android:id="@+id/confirmPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"/>

    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/margin_16"
        android:layout_weight="1"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/saveUpdateButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sign_in_button_height_48"
            android:background="@drawable/sign_in_button_background"
            android:layout_marginTop="@dimen/margin_24"
            android:layout_gravity="bottom"
            android:text="@string/save_update"
            android:textAllCaps="false"
            android:textColor="@color/white"/>

    </FrameLayout>


</LinearLayout>