<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_login"
        android:text="@string/reset_password"
        android:textSize="@dimen/font24"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginBetweenWelcomeBackAndEntering"
        android:text="@string/please_enter_email_to_reset_your_password"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_login"
        android:text="@string/email"
        android:textColor="@color/black"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        style="@style/TextInputLayoutStyle.Default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginBetweenWelcomeBackAndEntering">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextInputEditText.Default"
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/your_email"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/resetPasswordButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sign_in_button_height"
        android:background="@drawable/sign_in_button_background"
        android:layout_marginTop="@dimen/margin_login"
        android:text="@string/reset"
        android:textAllCaps="false"
        android:textColor="@color/white"/>

</LinearLayout>