<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="24dp"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin_login"
        android:text="@string/verification"
        android:textSize="@dimen/font24"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txtChangeEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        android:layout_marginTop="@dimen/marginBetweenWelcomeBackAndEntering"
        tools:text="We have sent a verification code to @someuseremail Change?"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtChangeEmail"
            android:text="@string/verification_code"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/txtResendCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtChangeEmail"
            android:layout_marginTop="@dimen/margin_login"
            android:layout_gravity="end"
            android:text="@string/re_send_code"
            android:textColor="@color/blue_ocean"/>

    <ru.gozerov.presentation.utils.VerificationCodeView
        android:id="@+id/verificationCodeView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginBetweenWelcomeBackAndEntering"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtResendCode"
        app:cellHeight="24dp"
        android:textSize="18sp"
        app:innerMargin="4dp"
        app:textViewCount="4"/>

    <TextView
        android:id="@+id/txtResetCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verificationCodeView"
        android:text="@string/you_can_re_send_code_in"/>

    <TextView
        android:id="@+id/txtResetCodeTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verificationCodeView"
        tools:text="3:00"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/continueButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sign_in_button_height"
        android:background="@drawable/sign_in_button_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtResetCodeTimer"
        android:layout_marginTop="@dimen/margin_login"
        android:text="@string/_continue"
        android:textAllCaps="false"
        android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>